[package]
name = "fauxchange"
version = "0.0.1"
edition = "2024"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "Exchange-in-a-box: a local options exchange simulator with realistic matching, FIX/WebSocket/REST APIs and historical replay, for testing trading systems."
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/fauxchange"
homepage = "https://github.com/joaquinbejar/fauxchange"
keywords = ["finance", "exchange", "simulator", "trading", "testing"]
categories = ["finance", "simulation", "development-tools::testing"]
include = [
    "src/**/*",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE",
    # `sqlx::migrate!("./migrations")` (src/db/pool.rs) is a COMPILE-TIME
    # macro that canonicalizes this directory when the crate is built from
    # ANY source tree, including a `cargo publish`-repackaged one — omitting
    # it breaks `cargo publish --dry-run` / `cargo install fauxchange` with
    # "error canonicalizing migration directory ... No such file or
    # directory" (found and fixed during the #55 release-readiness pass).
    "/migrations/**/*",
    # `sqlx::query!`/`query_as!` (src/db/journal.rs, src/db/executions.rs,
    # ...) resolve against this committed OFFLINE query cache at compile
    # time when `DATABASE_URL` is unset (`SQLX_OFFLINE`, matching CI) —
    # omitting it breaks the SAME published-source build with "set
    # DATABASE_URL ... or run cargo sqlx prepare" (found and fixed
    # alongside the migrations gap above).
    "/.sqlx/**/*",
]

[dependencies]
# Upstream matching stack. `option-chain-orderbook` re-exports the boundary
# newtypes (`OrderId`, `Side`, `Price`, `Quantity`, `TimeInForce`, `TimestampMs`,
# `Hash32`, `InstrumentStatus`) and owns the `SymbolParser` grammar. The
# `sequencer` feature is enabled from #006 (the single-writer order path): it
# activates the upstream `dep:tokio` (`rt` + `sync`) and `orderbook-rs/journal`,
# which pulls `crc32fast` 1.5 and `memmap2` 0.9 into the tree (the upstream
# on-disk journal machinery). #006 does not use that machinery — it builds the
# venue's own write-ahead envelope journal — but the feature makes the upstream
# sequencer / `MassCancelScope` / `MassCancelType` types reachable for the
# matching wiring in #007, and the audit note is recorded now.
option-chain-orderbook = { version = "0.7", features = ["sequencer"] }
# The async runtime for the per-underlying single-writer actor (#006): the
# bounded `mpsc` mailbox, the `oneshot` receipts, and the spawned actor task.
# `fauxchange` is async-first on `tokio` by design (CLAUDE.md; `rules` mandates
# `tokio::sync` primitives). Lean feature set — `rt` (the current-thread runtime
# + `spawn`), `sync` (`mpsc` / `oneshot`), and `macros` (`#[tokio::test]`); the
# `sequencer` feature above already activates tokio `rt` + `sync`, so this adds
# only the `macros` proc-macro to the tree. MIT, maintained by the tokio project.
# The async runtime. #006 needed only `rt` + `sync` + `macros` (the actor
# mailbox); #013 runs the live REST server and the periodic rate-limit
# `sweep_expired` task, so the feature set grows to what serving needs:
#   - `rt-multi-thread` — the binary's multi-thread runtime (`main.rs`).
#   - `net`             — `TcpListener` for `axum::serve` AND the FIX acceptor's
#     `TcpListener` / `TcpStream::into_split` (#037).
#   - `time`            — `tokio::time::interval` driving the bounded
#     `RateLimiter::sweep_expired` reclaim task (#011 seam obligation).
#   - `io-util`         — `AsyncReadExt::read_buf` / `AsyncWriteExt::write_all`
#     for the FIX per-connection task's manual read/write loop over the split
#     `TcpStream` halves (#037). The acceptor deliberately does NOT wrap the
#     socket in a `tokio_util::codec::Framed`: it splits the connection into owned
#     read/write halves and runs a dedicated writer task draining the bounded
#     outbound mailbox, which fits the per-session lifecycle (bounded backpressure,
#     graceful/aborted drain) better than a single `Framed` sink/stream. It feeds
#     `FixCodec` (a `tokio_util::codec::Decoder`) a bounded `BytesMut` directly and
#     writes pre-framed bytes back. Still a feature flag on the already-present
#     tokio 1.
# Still no new crate — these are feature flags on the already-present tokio 1.
tokio = { version = "1", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "net",
    "time",
    "io-util",
] }
# Needed directly only to name `OptionStyle` / `ExpirationDate`: upstream
# `option-chain-orderbook` v0.7.0 does not re-export them, so they must come
# from `optionstratlib` at the seam. `default-features = false` keeps the build
# lean (no plotly / async), matching how the upstream crate depends on it.
optionstratlib = { version = "0.17", default-features = false }
# Concurrent map for the in-memory executions / positions stores (#008): the
# `rules/global_rules.md` Concurrency section blesses `DashMap` over
# `Arc<RwLock<HashMap<>>>` for sharded, lock-free point access. Version `6`
# (`6.2.1`) is already resolved transitively via the upstream matching stack
# (`option-chain-orderbook` / `orderbook-rs` / `pricelevel`), so this direct
# dependency adds NO new version to the tree. MIT/Apache-2.0, maintained by the
# `xacrimon/dashmap` project.
dashmap = "6"
# REST/WS boundary + the live Axum server (#013/#014). `#003` needed only `json`
# (render `VenueError` / `Json` bodies); #013 turns the router into a running
# server and #014 adds the WebSocket surface, so the feature set grows to what
# the server actually uses:
#   - `json`   — `Json<T>` request/response bodies (unchanged from #003).
#   - `query`  — the `Query<T>` extractor for the list/OHLC query DTOs and the
#     WS handshake token (`?token=` / `?access_token=`, #014).
#   - `http1`  — the HTTP/1 protocol `axum::serve` speaks (no HTTP/2 dep pulled).
#   - `tokio`  — `axum::serve`, `TcpListener` wiring, and
#     `into_make_service_with_connect_info::<SocketAddr>()` so the REAL socket
#     peer reaches the rate-limit key (the `PeerAddr` seam, #011/#013).
#   - `ws`     — the `WebSocketUpgrade` / `WebSocket` / `Message` surface for
#     `GET /ws` (#014). Audit note: the `ws` feature pulls the WebSocket protocol
#     codec axum wraps NEW into the tree — `tokio-tungstenite` + `tungstenite` +
#     `data-encoding` + `futures-sink` — all pure-Rust, permissively licensed
#     (MIT/Apache-2.0), maintained crates; `cargo audit` / `cargo deny` (#019)
#     gate them. `sha1` + `base64` (the RFC-6455 handshake accept-key) were
#     ALREADY resolved in the tree, so the `ws` feature adds only a new dependency
#     EDGE to them, not new crate versions. The #014 conformance tests drive the
#     handshake over a bound server with a raw TCP client (`std::net::TcpStream`)
#     and add no client dependency; #027's Docker e2e smoke DOES add a real
#     `tokio-tungstenite` CLIENT — see the `[dev-dependencies]` audit note below
#     (`tests/docker_smoke.rs` observes a fill over `GET /ws` against the actual
#     running container, a black-box socket a `[dependencies]` router can't help
#     with).
# `Path`, `State`, and `middleware::from_fn*` need no feature flag. No new
# top-level crate is declared — these are feature flags on the already-present
# axum 0.8. MIT, maintained by the tokio project.
axum = { version = "0.8", default-features = false, features = [
    "json",
    "query",
    "http1",
    "tokio",
    "ws",
] }
# Swagger UI served at boot (#013). `utoipa-swagger-ui` 9.x is the version that
# targets **axum 0.8** + **utoipa 5** (verified against the crate manifest:
# `[dependencies.axum] version = "0.8.0"`, `[dependencies.utoipa] version =
# "5.0.0"`), matching the pinned `utoipa = "5"`. Feature set is deliberately
# minimal and OFFLINE-SAFE:
#   - `axum`     — the axum 0.8 `SwaggerUi` router integration.
#   - `vendored` — serve the Swagger UI assets from the cached
#     `utoipa-swagger-ui-vendored` crate, so the build NEVER downloads assets
#     over the network (the default build.rs path pulls `reqwest`; the `reqwest`
#     feature is left OFF, so that build-dependency is not compiled).
# `default-features = false` drops the `url` default (unused here). Audit note:
# this adds `rust-embed` 8, `zip` 3 (build-dep, unpacks the vendored asset zip),
# `mime` 0.3, and `utoipa-swagger-ui-vendored` 0.1 to the tree — all pure-Rust,
# permissively licensed, and already resolved in the local cache; `cargo audit`
# / `cargo deny` (#019) gate them. MIT/Apache-2.0, maintained by the utoipa
# project.
utoipa-swagger-ui = { version = "9", default-features = false, features = [
    "axum",
    "vendored",
] }
serde = { version = "1", features = ["derive"] }
# TOML parse for the layered venue config file (#022). `default-features = false,
# features = ["parse", "serde"]` keeps exactly the deserialize path we need
# (`toml::from_str` into the `#[serde(deny_unknown_fields)]` section structs) and
# drops `display` (no serializer — the venue only READS its config). Audit note:
# this adds `toml` 1 and `serde_spanned` NEW to the tree (both `toml-rs`
# project, MIT OR Apache-2.0, already on the deny.toml license allow-list — no
# new SPDX id); its parser deps `toml_parser` / `toml_datetime` / `winnow` and
# `serde_core` are ALREADY resolved (via `toml_edit` ← `proc-macro-crate`), so
# they add no new crate version. No CLI-parsing crate is pulled — a single
# `--config` / scalar-override flag set is parsed by a small hand-rolled parser
# in `src/config.rs`, so `clap` (a dev-only transitive of `criterion`) is NOT
# promoted to a runtime dependency. `cargo audit` / `cargo deny` (#019) gate it.
toml = { version = "1", default-features = false, features = ["parse", "serde"] }
# JSON parsing for the WebSocket client-action frames (#014). A `/ws` text frame
# is not an HTTP body, so the `axum::Json` extractor cannot reach it — the WS
# handler parses the frame itself (`serde_json::from_str`) to detect and reject
# order-entry-shaped frames and to decode the `{ "action": … }` protocol. Audit
# note: `serde_json` 1 is ALREADY resolved in the tree — `axum`'s `json` feature
# depends on it and it is a dev-dependency — so promoting it to a direct
# dependency adds NO new crate version; `cargo audit` / `cargo deny` (#019) gate
# it. MIT/Apache-2.0, maintained by the serde project.
serde_json = "1"
thiserror = "2"
# Structured logging for the actor lifecycle and its degraded paths — the venue
# logs through `tracing` exclusively (never `println!` / `log`), per CLAUDE.md
# and `rules/global_rules.md`. #006 is the first issue to emit events (actor
# stopped, a dropped write on a reused/sealed sequence, a sequencer write that
# cannot proceed). Version `0.1` is already resolved transitively via the
# upstream stack, so this direct dependency adds NO new version to the tree.
# MIT, maintained by the tokio project.
tracing = "0.1"
# The `tracing` subscriber the binary installs at startup (#013): without a
# subscriber every `tracing` event is silently dropped, so the server must
# install one before it logs. `default-features = false` + `["fmt","env-filter"]`
# gives exactly a formatting subscriber filtered by `RUST_LOG` — no ANSI/JSON
# extras pulled unless asked. It is the standard tokio-project subscriber (the
# canonical pair for `tracing`); it enters the tree at the binary only. `fmt`
# depends only on `tracing-core`; `env-filter` adds `regex`/`matchers`
# (already resolved via the dev/`proptest` tree). MIT, maintained by the tokio
# project; `cargo audit` / `cargo deny` (#019) gate it.
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "env-filter",
] }
# OpenAPI schema derivation: `ToSchema` on every REST/WS DTO and on the shared
# error envelopes, so #013 can register them in the OpenAPI document. Version 5
# (`5.5.0`) is already resolved transitively via the upstream stack, so this
# direct dependency adds NO new version to the tree. Default features only (no
# framework integration); the Swagger UI / `utoipa-axum` wiring lands with the
# REST gateway (#013). MIT/Apache-2.0, maintained by the utoipa project.
utoipa = "5"
# JWT (RS256, x509 key pair) for REST/WS auth (#011): `mint_token` / `verify_token`
# on the `JwtAuth` service. `default-features = false, features = ["use_pem"]`
# keeps exactly the PEM path we need (the `pem` + `simple_asn1` decoder) and no
# more; crucially, `DecodingKey::from_rsa_pem` extracts the RSA public key
# straight from a `CERTIFICATE` PEM, so `from_paths(cert, key)` needs NO separate
# x509 parser. The crypto backend is `ring` 0.17.14, which this dependency adds
# NEW to the tree (it was not present before #011) along with its transitive
# closure (`untrusted`, platform `windows_*` crates) — a native/asm RSA
# implementation entering the trusted computing base; `ring` is the reputable,
# widely audited crate `rustls` also uses, and `cargo audit`/`cargo deny` (#019)
# gate it. RS256 verification pins the algorithm to `[RS256]` (rejects `alg:none`
# and HS256 confusion before any crypto runs). MIT, maintained by the
# Keats/jsonwebtoken project (widely used, actively maintained).
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
# Argon2id password hashing for the venue account registry (#012): the FIX
# shared-secret is stored only as an Argon2id PHC string at the pinned OWASP
# baseline (m = 19456 KiB, t = 2, p = 1) with an optional server-side pepper, and
# verified in constant time. Default features (`alloc` + `password-hash` + `rand`)
# are exactly what the registry needs — `password-hash` for the PHC parse/format
# and `PasswordHasher`/`PasswordVerifier` traits, `rand` (→ `password-hash/rand_core`)
# for `SaltString::generate`. `argon2` 0.5.3 is a pure-Rust RustCrypto crate (NO
# `ring`/C), adding `argon2` + `blake2` + `base64ct` + `password-hash` NEW to the
# tree (all RustCrypto, MIT/Apache-2.0, widely used); `cargo audit` / `cargo deny`
# (#019) gate them. The pinned parameters ARE `argon2`'s own documented defaults,
# so `Params::DEFAULT` equals the OWASP baseline. Argon2**id** is selected
# explicitly (never Argon2i/Argon2d).
argon2 = "0.5"
# The OS CSPRNG (`rand_core::OsRng`) that seeds each Argon2 salt via
# `SaltString::generate` (#012). `rand_core` 0.6.4 is ALREADY resolved in the tree
# (via `rand` 0.8 ← `optionstratlib`), so this direct dependency adds NO new crate
# version (verified: the Cargo.lock diff introduces only argon2/blake2/base64ct/
# password-hash); feature unification already has `getrandom` active at HEAD, so
# this just names `rand_core` directly for `OsRng`. `default-features = false` keeps it
# minimal. It is the SAME `rand_core` `password-hash` uses, so `OsRng` satisfies
# the `CryptoRngCore` bound. MIT/Apache-2.0, maintained by the rust-random project.
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
# OPTIONAL durable persistence: the `sqlx` PostgreSQL layer (#023). `sqlx` is a
# NORMAL (non-feature-gated) dependency selected at RUNTIME by `DATABASE_URL`
# presence — the in-memory backend is always compiled and serves when the URL is
# unset; the `PgPool` opens (and `sqlx::migrate!` runs) only when it is set. It is
# NOT behind a cargo feature because the venue must build one image that runs both
# DB-less and durable from the same binary (docs/06 §6), so a compile-time toggle
# would defeat the "one image, both modes" packaging goal. Version `0.9.0` matches
# the `sqlx-cli` 0.9.0 that generates the committed `.sqlx/` offline data.
# `default-features = false` drops the `any`/`json` defaults we do not use; the
# explicit feature set is exactly the Postgres path:
#   - `runtime-tokio`     — the async runtime the venue already runs on.
#   - `tls-rustls-ring`   — RUSTLS with the **ring** crypto backend (NOT
#     `native-tls`/OpenSSL — no C toolchain, no OpenSSL in the image; NOT
#     `tls-rustls-aws-lc-rs` — that would add the aws-lc C/asm crate NEW to the
#     tree). `ring` 0.17 is ALREADY resolved (via `jsonwebtoken`), so the crypto
#     backend adds no new crypto crate; the rustls stack (`rustls`,
#     `rustls-pki-types`, `webpki-roots`) is pure-Rust, permissively licensed.
#   - `postgres`          — the Postgres driver (the only backend the venue uses).
#   - `macros`            — the COMPILE-TIME-checked `query!` / `query_as!` /
#     `migrate!` macros (`macros` pulls `derive` for `#[derive(sqlx::FromRow)]`).
#   - `migrate`           — `sqlx::migrate!("./migrations")` run at boot.
# Audit note: `sqlx` pulls a large transitive tree (the driver + rustls stack);
# `cargo audit` / `cargo deny` (#019) gate it and any new SPDX id is added to
# `deny.toml`'s allow-list with a reason. MIT/Apache-2.0, maintained by the
# launchbadge/sqlx project.
sqlx = { version = "0.9.0", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "postgres",
    "macros",
    "migrate",
] }
# The FIX 4.4 gateway's primitive layer (#036, the first v0.4 dependency
# additions). `fauxchange` builds the acceptor on IronFix primitives
# ([ADR-0002](docs/adr/0002-fix-4-4-gateway-on-ironfix.md)); #036 is the typed
# message vocabulary and consumes exactly three of the eleven IronFix crates —
# the framing, the type vocabulary, and the version constant — NOT the (partial
# / skeleton) transport / session / engine crates, which land with the acceptor
# (#037) and session layer (#038). All three are published on crates.io at
# `0.3.1` (verified `cargo tree -p <crate>` resolves each at `0.3.1` against the
# crates.io sparse index; `deny.toml [sources]` allows ONLY that registry — no
# git / path dep). MIT, maintained by the joaquinbejar/IronFix project.
#   - ironfix-core: the `MsgType` / `CompId` / `SeqNum` / `Timestamp` vocabulary
#     and the `RawMessage` / `FieldRef` zero-copy decode view the typed structs
#     read fields from. Audit note: pulls `num-derive` NEW into the tree (a
#     compile-time derive helper; its `proc-macro2` / `quote` / `syn` deps are
#     ALREADY resolved via `serde_derive`), and adds a dependency EDGE to
#     `rust_decimal` (already present via `optionstratlib`) and `chrono` (already
#     present) — no new crate version for those. `fauxchange`'s FIX price seam
#     does NOT use `rust_decimal`: the decimal `Price` exists only as a string at
#     the FIX edge and is parsed to integer `Cents` with checked integer
#     arithmetic (repo Override O-1, ADR-0003).
#   - ironfix-tagvalue: the zero-copy `Decoder` / `Encoder` + checksum framing
#     the hand-written encode/decode runs over (`ironfix-derive` is `todo!()`, so
#     the typed structs are hand-written — the design, not a workaround). Deps
#     (`bytes` / `smallvec` / `memchr` / `itoa`) are ALL already in the tree.
#   - ironfix-dictionary: consumed ONLY for `Version::Fix44.begin_string()`, the
#     pinned `BeginString (8) = FIX.4.4` constant (dialect §1). Audit note: pulls
#     `quick-xml` NEW into the tree (its QuickFIX-XML loader, which `fauxchange`
#     does not call — the dialect lives in `docs/specs/fix-dialect.md`, not an XML
#     file); `quick-xml`'s only dep is `memchr`, already present. `quick-xml` is
#     MIT and `num-derive` is MIT OR Apache-2.0 — both already on the `deny.toml`
#     license allow-list; `cargo audit` / `cargo deny` gate the whole tree.
# #140 audit note — patch bump `0.3.0` -> `0.3.1` on all four IronFix crates.
# What changed upstream: `ironfix-tagvalue`'s `Decoder` and
# `ironfix-transport`'s `FixCodec` now fold the two attacker-controlled numeric
# fields — `BodyLength (9)` and `CheckSum (10)` — with CHECKED, non-wrapping
# arithmetic: the frame-length add is a `checked_add` chain returning
# `InvalidBodyLength` on overflow (`ironfix-transport-0.3.1/src/codec.rs:161`,
# `ironfix-tagvalue-0.3.1/src/decoder.rs:154`), and `parse_checksum` folds the
# three checksum digits in `u16` and range-checks to `0..=255`, returning `None`
# (→ a typed `InvalidBodyLength` / `InvalidFieldValue{tag:10}`) instead of
# overflowing a `u8` (`ironfix-tagvalue-0.3.1/src/checksum.rs:70`). A hostile
# declared length or out-of-range checksum therefore surfaces as a typed
# `CodecError`/`DecodeError` with NO panic in a debug OR release build — verified
# against the published `0.3.1` crates.io source, not a local checkout. Why: this
# retires the venue's own now-redundant pre-decode guards (the framing-layer
# `BodyLength`/`CheckSum` precheck in `acceptor.rs` and the `validate_body_length`
# / `reject_malformed_checksum` guards in `mod.rs` — #140), since the decoder now
# owns both checks. The byte-cap `BoundedFrameDecoder` stays as a DoS/resource
# ceiling by policy (not a security check). Why safe: same MINOR series (0.3.x),
# no API break in the surface `fauxchange` consumes (build + clippy + the FIX
# conformance/fuzz suites all pass); NO new crate enters the tree — a patch bump
# of crates already resolved; `cargo audit` / `cargo deny` clean. (The relock also
# incidentally shifts a few UNRELATED transitive edges — e.g. `errno` / `rustix` /
# `tempfile` pick an already-resolved `windows-sys 0.52/0.59` and `getrandom 0.3`
# instead of `0.61`/`0.4` — a resolver reshuffle among versions already present in
# the tree on `main`; it adds/removes NO package version and is Windows-inert here,
# so `cargo audit` / `cargo deny` stay clean either way.)
ironfix-core = "0.3.1"
ironfix-tagvalue = "0.3.1"
ironfix-dictionary = "0.3.1"
# The FIX 4.4 acceptor's framing codec (#037). `ironfix-transport::FixCodec` is a
# `tokio_util::codec::Decoder`/`Encoder` that frames a FIX message on the wire
# (BeginString / BodyLength / CheckSum), reused as-is
# ([03 §5.1](docs/03-protocol-surfaces.md#5-fix-44-gateway-new), [ADR-0002](docs/adr/0002-fix-4-4-gateway-on-ironfix.md));
# IronFix ships NO TCP acceptor, so the accept loop, the per-connection task, and
# the connection lifecycle are new venue work over this codec. Published on
# crates.io at `0.3.1` (verified `cargo tree -p ironfix-transport` resolves at
# `0.3.1` against the crates.io sparse index; `deny.toml [sources]` allows ONLY
# that registry — no git / path dep). Audit note: `ironfix-transport` 0.3.1's own
# dependencies — `ironfix-core`, `ironfix-tagvalue`, `thiserror`, `tokio`,
# `tokio-util`, `bytes`, `memchr`, `tracing` — are ALL already resolved in the
# tree (verified against `Cargo.lock`), so it adds only the one new crate edge,
# no new transitive crate version. `fauxchange` consumes only its `codec` module
# (`FixCodec` / `CodecError`); the (skeleton) `ironfix-session` / `ironfix-store`
# crates land with #038. MIT, maintained by the joaquinbejar/IronFix project.
# Patch-bumped `0.3.0` -> `0.3.1` in #140 (see the #140 audit note above): the
# `FixCodec` frame-length add + checksum fold are now checked/non-wrapping, so
# the venue's framing-layer precheck around it is retired and `BoundedFrameDecoder`
# is kept purely as the byte-cap DoS ceiling.
ironfix-transport = "0.3.1"
# `tokio_util::codec::Decoder` — the trait `FixCodec` (above) implements and the
# venue's bounded frame decoder (`src/gateway/fix/acceptor.rs`) wraps to enforce a
# by-policy byte cap (a DoS/resource ceiling) around `FixCodec` (#037; the
# hostile-arithmetic precheck retired in #140 now that the codec is checked). Only the `codec` feature
# is enabled (the `Decoder`/`Encoder` traits + the `BytesMut` framing buffer). Audit
# note: `tokio-util` 0.7.18 is ALREADY resolved in the tree (via `sqlx`), so naming
# it as a direct dependency at `0.7` adds NO new crate version — the same
# "already in the tree, adds no new version" precedent as `serde_json` / `tower`.
# MIT, maintained by the tokio project; `cargo audit` / `cargo deny` gate it.
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
# `bytes::BytesMut` — the growable byte buffer the `tokio_util::codec::Decoder`
# signature takes (`decode(&mut BytesMut)`) and the FIX acceptor's per-connection
# read buffer (#037). Audit note: `bytes` 1.x is ALREADY resolved in the tree
# (via `tokio` / `axum` / `sqlx` / `ironfix-tagvalue`), so naming it directly at
# `1` adds NO new crate version. MIT, maintained by the tokio project; `cargo
# audit` / `cargo deny` gate it.
bytes = "1"

[dev-dependencies]
proptest = "1"
serde_json = "1"
# Multi-threaded runtime for the actor's concurrent-submit ordering test
# (`#[tokio::test(flavor = "multi_thread")]`); additive to the `[dependencies]`
# tokio features above.
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }
# `ServiceExt::oneshot` to drive the `auth_middleware` through a real `axum::Router`
# in `tests/auth.rs` (request flow → 401/403/429 + `X-RateLimit-*` headers) without
# binding a TCP listener. `tower` 0.5.3 is ALREADY in the tree (axum depends on
# it), so this dev-only dependency adds no new version; the `util` feature exposes
# `oneshot`. MIT, maintained by the tower project.
tower = { version = "0.5", features = ["util"] }
# The `bench-hdr` harness's DISTRIBUTION reporter (#020): every hot-path bench
# under `benches/` records latencies into a `Histogram<u64>` and reports
# p50/p99/p99.9/p99.99 through it — never criterion's default mean/std
# (docs/07-performance-budgets.md §5). `default-features = false`: the base
# `Histogram` type (`record` / `value_at_quantile` / `len` / `min` / `max`) only
# needs the crate's mandatory `num-traits` + `byteorder` deps (verified against
# the upstream `Cargo.toml`: `serialization` gates `flate2`/`nom`/`base64` for
# `.hgrm` file persistence and `sync` gates `crossbeam-channel` for
# `SyncHistogram` — both are the crate's own `default` set, and this harness
# uses neither: no histogram is persisted to disk, and every histogram here is
# owned by a single task/thread at a time). Dev-only: never reaches the shipped
# binary; `cargo audit` / `cargo deny` (#019) gate it like every other
# dependency. MIT/Apache-2.0, maintained by the HdrHistogram project (a direct
# Rust port of the reference Java/C# `HdrHistogram`, widely used for tail-latency
# reporting across the industry).
hdrhistogram = { version = "7", default-features = false }
# The `bench-hdr` harness's ORCHESTRATION half (#020,
# docs/07-performance-budgets.md §5: "criterion for orchestration, hdrhistogram
# for the reported distribution"). `benches/criterion_match_cost.rs` is a real,
# working `criterion`-driven micro-benchmark (deterministic workload
# construction, CPU-bound and independent of the actor/tokio machinery the
# hdrhistogram-native benches measure); the `hp1_order_path` / `hp2_ws_fanout` /
# `alloc_profile` binaries are deliberately `harness = false` plain binaries
# instead — per-sample `hdrhistogram` capture at scale does not fit criterion's
# default statistical-convergence iteration model (the same resolution the
# `orderbook-rs` sibling `bench-hdr` skill reached: its `_hdr` benches bypass
# criterion's `Bencher` entirely, while its OTHER benches keep using criterion
# natively) — so criterion's own mean/std-dev output, wherever it appears, is
# never cited as `BENCH.md` evidence. `default-features = false`: the crate's
# own `default` set (`rayon` + `plotters` + `cargo_bench_support`) pulls a
# thread-pool and an SVG plotting backend this harness's single benchmark
# function does not use; only `Criterion`/`criterion_group!`/`criterion_main!`
# and `Bencher::iter` are called. Dev-only: never reaches the shipped binary.
# MIT/Apache-2.0, maintained by the bheisler/criterion project.
criterion = { version = "0.8", default-features = false }
# `benches/alloc_profile.rs`'s global-allocator instrumentation (#020,
# self-review finding #112 on #75: the bench's original hand-rolled
# `CountingAllocator` carried a local `unsafe impl GlobalAlloc`, violating the
# repo's absolute no-`unsafe`-anywhere rule — an inline `// SAFETY:` comment is
# not a governance decision, per CLAUDE.md / rules/global_rules.md / ADR-0008).
# `stats_alloc::StatsAlloc<System>` is a drop-in `GlobalAlloc` wrapper whose
# `unsafe impl GlobalAlloc` is VENDORED inside the crate; `fauxchange`'s own
# code only ever calls the crate's fully safe API (`StatsAlloc::system()` —
# a stable, non-nightly-gated `const fn` — and `Region::new`/`Region::change`),
# so this bench needs zero `unsafe` of its own. `src/lib.rs` keeps
# `#![forbid(unsafe_code)]` unconditionally; this is a dev-dependency of a
# separate, independent bench binary — it never reaches the shipped crate or
# the container image. Audit note: `stats_alloc` 0.1.10 is a small (~200
# line), single-file, dependency-free (zero transitive deps — verified via the
# `Cargo.lock` diff: only `stats_alloc` itself is added) MIT-licensed crate by
# neoeinstein (github.com/neoeinstein/stats_alloc); `cargo audit` / `cargo
# deny` (#019) gate it like every other dependency and are clean. Reporting
# format: `Stats { allocations, deallocations, reallocations, bytes_allocated,
# bytes_deallocated, bytes_reallocated }` — a finer breakdown than the old
# hand-rolled counter (which folded `realloc` into the "alloc" bucket
# unconditionally and always added the FULL new size to `bytes_alloc`, even
# when a realloc shrank the allocation); the swap is a strictly more accurate
# accounting, so the recorded `allocs/op` / `bytes_alloc/op` numbers in
# `BENCH.md` §5 were re-measured (not carried over) — see that section's note.
stats_alloc = { version = "0.1.10", default-features = false }
# The REAL-Postgres integration harness for the optional persistence layer (#023):
# an EPHEMERAL `postgres:18-alpine` container spun up per test run, so the DB
# tests use a real Postgres, never a mocked DB (rules SQL & Persistence). Dev-only
# — never reaches the shipped binary. The `#[ignore]`-gated DB test runs only under
# `cargo test -- --ignored` (the CI `migrations` job, where Docker is available);
# the default `cargo test` suite skips it and stays green WITHOUT Docker. Audit
# note: `testcontainers` + `testcontainers-modules` and their transitive tree
# (`bollard`-style docker client) are dev-only; `cargo audit` / `cargo deny` (#019)
# gate them. MIT/Apache-2.0, maintained by the testcontainers-rs project.
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
# The Docker e2e smoke test's WS client (#027, `tests/docker_smoke.rs`):
# observing a fill over `GET /ws` against the ACTUAL running container is a
# real black-box socket the in-process `[dependencies]` axum router can't
# help with (unlike #014's conformance tests, which drive the handshake over
# a bound server with a raw `std::net::TcpStream` and need no WS client at
# all — see the `axum` `ws`-feature audit note above). `tokio-tungstenite`
# 0.29 is the client; `futures-util` supplies the `StreamExt`/`SinkExt` traits
# `WebSocketStream::next`/`send` need. BOTH are a zero-new-resolved-version
# addition: `axum` 0.8.9's own `ws` feature already pulls `tokio-tungstenite`
# 0.29.0 + `tungstenite` 0.29.0 transitively (its server-side implementation),
# and `futures-util` 0.3.32 is already resolved transitively via axum/tower —
# verified against `Cargo.lock` before adding either line; declaring them
# here at these exact version constraints resolves to the SAME already-locked
# versions, no new crate enters the tree (the same "already in the tree, adds
# no new version" precedent as `tower` above). Dev-only: never reaches the
# shipped binary; `cargo audit` / `cargo deny` (#019) already gate both as
# existing transitive deps. MIT/Apache-2.0, maintained by the
# snapview/tokio-tungstenite and rust-lang/futures-rs projects respectively.
# The REST leg of the same test (health poll, token mint, order placement)
# deliberately does NOT add a client dependency — a small hand-rolled
# HTTP/1.1 client over the already-present `tokio::net::TcpStream` +
# `serde_json` covers three simple JSON calls, avoiding hyper-util's client
# machinery (also already in the tree, but only for axum's own server usage
# today) for a need this small.
tokio-tungstenite = "0.29"
futures-util = "0.3"

[[bench]]
name = "hp1_order_path"
path = "benches/hp1_order_path.rs"
harness = false

[[bench]]
name = "hp2_ws_fanout"
path = "benches/hp2_ws_fanout.rs"
harness = false

[[bench]]
name = "hp3_fix_parse"
path = "benches/hp3_fix_parse.rs"
harness = false

[[bench]]
name = "hp5_durable_append"
path = "benches/hp5_durable_append.rs"
harness = false

[[bench]]
name = "mm_requote_hdr"
path = "benches/mm_requote_hdr.rs"
harness = false

[[bench]]
name = "alloc_profile"
path = "benches/alloc_profile.rs"
harness = false

[[bench]]
name = "criterion_match_cost"
path = "benches/criterion_match_cost.rs"
harness = false
